# MarkVision

./: .gitignore  History.md  MarkdownParser.js  README.md  index.html  main.js  package-lock.json  package.json  script.js  styles.css  vite.config.js
.github/workflows/: build.yml
docs/: portable-build-guide.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/modules/: SyncScroll.js  events.js  file.js  portable.js  renderer.js  storage.js  ui.js
src/styles/: main.css
