[package]
name = "markvision"
version = "1.0.0"
description = "一个简单易用的Markdown预览和编辑工具"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
